# Major_Project

./: .gitignore  README.md  requirements.txt
.devcontainer/: devcontainer.json
deva_ai/: .gitignore  pyproject.toml
deva_ai/src/deva_ai/: crew.py  helper.py  main.py  sqlite_patch.py  utils.py
deva_ai/src/deva_ai/config/: agents.yaml  tasks.yaml
deva_ai/src/deva_ai/datasets/engineered/: AB_NYC_2019_engineered.csv  Telecom_Churn_engineered.csv
deva_ai/src/deva_ai/datasets/preprocessed/: Sample data_preprocessed.xlsx  Telecom_Churn_preprocessed.csv
deva_ai/src/deva_ai/streamlit_components/: AI_Insights.py  data_ingestion_output.py  data_preprocessing_output.py  feature_engineering_output.py  insight_generation_output.py
deva_ai/src/deva_ai/tools/: data_preprocessing_tool.py  feature_engineering_tool.py  file_handling_tool.py  file_upload_tool.py  insight_generation_tool.py
