[project]
name = "deva_ai"
version = "0.1.0"
description = "DEVA_AI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
deva_ai = "deva_ai.main:run"
run_crew = "deva_ai.main:run"
train = "deva_ai.main:train"
replay = "deva_ai.main:replay"
test = "deva_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
